# CrossCtlFrameworks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  alembic.ini  concord_reader.spec  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release-reader.yml
contracts/: headers.v1_1.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  THREAT_MODEL.md  overview.html
docs/runbooks/: build-windows-exe.md  deploy-reader-from-github.md  docker-on-windows.docx  docker-on-windows.md  header-contract-mismatch.md  ingestion-failed.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_provenance_and_ops.py
src/ccf/: __init__.py  cli.py  config.py  db.py  logging.py  models.py  schemas.py
src/ccf/api/: deps.py  main.py  metrics.py
src/ccf/api/routes/: controls.py  coverage.py  diff.py  evidence.py  frameworks.py  health.py  mappings.py  oscal.py  poams.py  reports.py  risks.py  search.py  systems.py  ui.py  users.py  worksheets.py
src/ccf/api/templates/: _controls_table.html  base.html  control_detail.html  controls.html  coverage.html  dashboard.html  diff.html  framework_detail.html  frameworks.html  ingestions.html  mappings.html  poams.html  quarantine.html  reports.html  risks.html  search.html  settings.html  system_detail.html  systems.html  users.html  worksheet_detail.html  worksheets.html
src/ccf/etl/: __init__.py  frameworks.py  pipeline.py  validate.py
src/ccf/reader/: __init__.py  bootstrap.py  ingest.py  launcher.py
tests/: conftest.py  test_api.py  test_frameworks_classifier.py  test_ingest.py  test_new_routes.py
web/landing/: README.md  package-lock.json  package.json  tailwind.config.ts
web/landing/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
web/landing/components/: demo.tsx
(+7 files in other folders)
