[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccf"
version = "0.1.0"
description = "Concord — NIST SP 800-53A Rev 5 + cross-framework control mappings platform"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary — © 2026 Colleen Townsend. All rights reserved." }
authors = [{ name = "Colleen Townsend" }]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.13,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "openpyxl>=3.1,<4",
    "structlog>=24.1,<25",
    "python-slugify>=8.0,<9",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-python-slugify",
]

[project.scripts]
ccf = "ccf.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ccf.api" = ["templates/*.html", "static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
